add missing type styles

--- a/misc/pinout-gen/style.css
+++ b/misc/pinout-gen/style.css
@@ -80,6 +80,14 @@
   border-color: lightgreen;
 }
 
+[data-type*="mr"] {
+  border-color: firebrick;
+}
+
+[data-type*="pgnd"] {
+  border-color: coral;
+}
+
 [data-type*="sgnd"] {
   border-color: olive;
 }
