add missing color

--- a/misc/pinout-gen/style.css
+++ b/misc/pinout-gen/style.css
@@ -92,6 +92,10 @@
   border-color: olive;
 }
 
+[data-type*="usb"] {
+  border-color: lightseagreen;
+}
+
 [data-type*="vr"] {
   border-color: sienna;
 }
