--- a/misc/pinout-gen/style.css
+++ b/misc/pinout-gen/style.css
@@ -80,8 +80,20 @@
   border-color: lightgreen;
 }
 
+[data-type*="mr"] {
+  border-color: firebrick;
+}
+
+[data-type*="pgnd"] {
+  border-color: coral;
+}
+
 [data-type*="sgnd"] {
   border-color: olive;
+}
+
+[data-type*="usb"] {
+  border-color: lightseagreen;
 }
 
 [data-type*="vr"] {
