replace firmware ID column with TS name

--- a/misc/pinout-gen/style.css
+++ b/misc/pinout-gen/style.css
@@ -217,7 +217,7 @@ table th {
     display: flex;
     flex-direction: column;
   }
-  .info-table, .id-data, .id-header, .type-data, .type-header, .color-data, .color-header, thead {
+  .info-table, .ts-data, .ts-header, .type-data, .type-header, .color-data, .color-header, thead {
     display: none;
   }
   .connector-container {
