try to fix table width

--- a/misc/pinout-gen/style.css
+++ b/misc/pinout-gen/style.css
@@ -148,7 +148,8 @@ table {
 
 @media (max-width: 1000px) {
   table {
-    font-size: 3rem;
+    word-wrap: break-word;
+    font-size: 2.5rem;
   }
 }
 
